# mmg-microbus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  EXPECTATIONS.md  FULL_GUIDE.md  LIFECYCLE-REFACTOR.md  MANUAL.md  REFACTOR-DESIGN.md
examples/: active_source.rs  all_in_one.rs  final_showcase.rs
microbus-macros/: Cargo.toml  README.md
microbus-macros/src/: gen.rs  lib.rs
microbus-macros/src/codegen/: analyze.rs  emit.rs  emit_actives.rs  emit_handles.rs  emit_ret.rs  emit_run.rs  mod.rs  msgs.rs  parse.rs
src/: app.rs  bus.rs  component.rs  config.rs  config_registry.rs  error.rs  lib.rs  registry.rs
tests/: active_once.rs  config_semantics.rs  core_semantics.rs  dynamic_any.rs  handles_integration.rs  handles_readonly_and_filters.rs  macro_ui.rs  missing_config.rs  pattern_cleanup.rs  route_singleton_constraint.rs
tests/ui/: handle_instance_string_forbidden.rs  handle_instance_string_forbidden.stderr  handle_instance_without_from.rs  handle_instance_without_from.stderr  happy_min.rs  signature_rules.rs
